added sign up page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<p class="accountSale">don't have an account yet?</p>
 
 		<button>
-			<p class="signUpButton"><b>Sign Up</b></p>
+			<a href="./pages/signup.html"><p class="signUpButton"><b>Sign Up</b></p></a>
 		</button>
 	</div>
 
