added search page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </body>
 
 <footer>
-	<a><img class="searchIMG" src="./img/search.png"></a>
+	<a href="./pages/search.html"><img class="searchIMG" src="./img/search.png"></a>
 </footer>
 
 </html>
