added search page

--- a/pages/search.html
+++ b/pages/search.html
@@ -31,7 +31,7 @@
 </body>
 
 <footer>
-	<a href="./pages/search.html"><img class="searchIMG" src="../img/search.png"></a>
+	<a href="../index.html"><img class="searchIMG" src="../img/search.png"></a>
 </footer>
 
 </html>
