--- a/pages/search.html
+++ b/pages/search.html
@@ -25,7 +25,7 @@
 
 	<div class="textContainer">
 		<p><b>Search by</b></p>
-		<p>Genre, key, "type beat" or producer</p>
+		<p>genre, key, "type beat" or producer</p>
 	</div>
 
 </body>
