added back button to search

--- a/pages/search.html
+++ b/pages/search.html
@@ -16,7 +16,7 @@
 
 <body>
 
-	<header>Search</header>
+	<header><a href="../index.html"><img class ="backArrow" src="../img/back.png"></a>Search</header>
 
 	<div class="searchBarContainer">
 		<label for="search"></label>
