changed font size in text boxes and added back arrow on sign up page

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -14,7 +14,7 @@
 
 <body>
 
-	<header>Sign Up</header>
+	<header><a href="../index.html"><img class ="backArrow" src="../img/back.png"></a>Sign Up</header>
 
 	<div class="logoContainer">
 		<img class="img" src="../img/logo.png">
