adding home page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div class="loginButtonContainer">
 
 		<button>
-			<p class="loginButton"><b>Login</b></p>
+			<a href="./pages/home.html"><p class="loginButton"><b>Login</b></p></a>
 		</button>
 
 	</div>
