--- a/pages/home.html
+++ b/pages/home.html
@@ -15,5 +15,73 @@
 
 	<header>For you<a href="./notifs.html"><img class="notifBell" src="../img/notif.png"></a></header>
 
+	<div class="contentContainer">
+		<div class=imageContainer>
+		<img class="defaultIMG" src="../img/default.png">
+	</div>
+	<div class="infoContainer">
+		<p class="trackName"><b>Track Name</b></p>
+		<p class="artistName">Artist Name</p>
+		</div>
+	</div>
+
+	<div class="contentContainer">
+		<div class=imageContainer>
+		<img class="defaultIMG" src="../img/default.png">
+	</div>
+	<div class="infoContainer">
+		<p class="trackName"><b>Track Name</b></p>
+		<p class="artistName">Artist Name</p>
+		</div>
+	</div>
+
+	<div class="contentContainer">
+		<div class=imageContainer>
+		<img class="defaultIMG" src="../img/default.png">
+	</div>
+	<div class="infoContainer">
+		<p class="trackName"><b>Track Name</b></p>
+		<p class="artistName">Artist Name</p>
+		</div>
+	</div>
+
+	<div class="contentContainer">
+		<div class=imageContainer>
+		<img class="defaultIMG" src="../img/default.png">
+	</div>
+	<div class="infoContainer">
+		<p class="trackName"><b>Track Name</b></p>
+		<p class="artistName">Artist Name</p>
+		</div>
+	</div>
+
+	<div class="contentContainer">
+		<div class=imageContainer>
+		<img class="defaultIMG" src="../img/default.png">
+	</div>
+	<div class="infoContainer">
+		<p class="trackName"><b>Track Name</b></p>
+		<p class="artistName">Artist Name</p>
+		</div>
+	</div>
+
+	<div class="contentContainer">
+		<div class=imageContainer>
+		<img class="defaultIMG" src="../img/default.png">
+	</div>
+	<div class="infoContainer">
+		<p class="trackName"><b>Track Name</b></p>
+		<p class="artistName">Artist Name</p>
+		</div>
+	</div>
+
 </body>
+
+<footer>
+	<img class="homeButton" src="../img/home.png">
+	<a href="./search.html"><img class="searchButton" src="../img/search.png"></a>
+	<img class="settingsButton" src="../img/settings.png">
+	<img class="profileButton" src="../img/profile.png">
+</footer>
+
 </html>
