--- a/pages/signup.html
+++ b/pages/signup.html
@@ -50,7 +50,7 @@
 	<div class="signUpButtonContainer">
 
 		<button>
-			<p class="signUpButton"><b>Sign Up</b></p>
+			<a href="./home.html"><p class="signUpButton"><b>Sign Up</b></p></a>
 		</button>
 
 </body>
