added settings page

--- a/pages/home.html
+++ b/pages/home.html
@@ -80,7 +80,7 @@
 <footer>
 	<img class="homeButton" src="../img/home.png">
 	<a href="./search.html"><img class="searchButton" src="../img/search.png"></a>
-	<img class="settingsButton" src="../img/settings.png">
+	<a href="./settings.html"><img class="settingsButton" src="../img/settings.png"></a>
 	<img class="profileButton" src="../img/profile.png">
 </footer>
 
