added notifications page

--- a/pages/search.html
+++ b/pages/search.html
@@ -31,7 +31,10 @@
 </body>
 
 <footer>
-	<a href="../index.html"><img class="searchIMG" src="../img/search.png"></a>
+	<a href="./home.html"><img class="homeButton" src="../img/home.png"></a>
+	<a href="./search.html"><img class="searchButton" src="../img/search.png"></a>
+	<a href="./settings.html"><img class="settingsButton" src="../img/settings.png"></a>
+	<img class="profileButton" src="../img/profile.png">
 </footer>
 
 </html>
