--- a/pages/settings.html
+++ b/pages/settings.html
@@ -54,7 +54,7 @@
 </body>
 
 <footer>
-	<img class="homeButton" src="../img/home.png">
+	<a href="./home.html"><img class="homeButton" src="../img/home.png"></a>
 	<a href="./search.html"><img class="searchButton" src="../img/search.png"></a>
 	<a href="./settings.html"><img class="settingsButton" src="../img/settings.png"></a>
 	<img class="profileButton" src="../img/profile.png">
