added dummy profile

--- a/pages/home.html
+++ b/pages/home.html
@@ -81,7 +81,7 @@
 	<img class="homeButton" src="../img/home.png">
 	<a href="./search.html"><img class="searchButton" src="../img/search.png"></a>
 	<a href="./settings.html"><img class="settingsButton" src="../img/settings.png"></a>
-	<img class="profileButton" src="../img/profile.png">
+	<a href="./profile.html"><img class="profileButton" src="../img/profile.png"></a>
 </footer>
 
 </html>
