--- a/pages/notifs.html
+++ b/pages/notifs.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="./img/favicon.ico">
+	<link rel="shortcut icon" href="../img/favicon.ico">
 
 	<title>Notifications</title>
 
@@ -28,7 +28,7 @@
 	<a href="./home.html"><img class="homeButton" src="../img/home.png"></a>
 	<a href="./search.html"><img class="searchButton" src="../img/search.png"></a>
 	<a href="./settings.html"><img class="settingsButton" src="../img/settings.png"></a>
-	<img class="profileButton" src="../img/profile.png">
+	<a href="./profile.html"><img class="profileButton" src="../img/profile.png"></a>
 </footer>
 
 </html>
