added edit profile page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -23,7 +23,7 @@
 	</div>
 
 	<div class="editProfile">
-		<p><b>edit profile</b></p>
+		<a href="./editprofile.html"><p><b>edit profile</b></p></a>
 	</div>
 
 	<div class="name">
