--- a/pages/settings.html
+++ b/pages/settings.html
@@ -16,7 +16,7 @@
 
 <body>
 
-	<header><a href="./home.html"><img class ="backArrow" src="../img/back.png"></a>Settings</header>
+	<header>Settings</header>
 
 	<div class="searchBarContainer">
 		<label for="search"></label>
